- Updated plugin and VDR patch for 1.7.12 - Thx to Rolf Ahrenberg (Closes #236)
- Fixed replay when the current live ttxtsubs page differs from the
  one in the recording - Thx to Rolf Ahrenberg (Closes #139)
- Added VDR patch that stores the manual page selection with the channel settings
  in the channels.conf - patch provided by Rolf Ahrenberg (tpid-v2)
  (references #139)

2009-04-26: Version 0.1.0
- Updated VDR patch and plugin to VDR 1.7.6 with support for the TS recording
  format and added separate delay setting for TS recordings. Older VDR versions
  are no longer supported. Credits go to Rolf Ahrenberg - Thanks a lot!
- Silence compiler warning about unchecked read return value.
  (thx to Rolf Ahrenberg)
- After replaying, reset the last channel variable and trigger a channel switch
  to reinitialize the live ttxtsubs display. (thx to Rolf Ahrenberg)
- Removed unused local copy of vdrttxtsubshooks.c|h

2009-04-03: Version 0.0.9
- Updated French translation provided by Michaël Nival (Closes #49)
- Install plug-in to lib dir with --remove-destination
- Added note in README about reported problems with Digitainer II (Closes #62)
- Don't show page selection menu, when there is no current channel (Closes #111)

2009-01-04: Version 0.0.8
- Updated Italien translation provided by Diego Pierotto
- Updated Russian translation provided by Oleg Roitburd (Closes #47)
- Fixed displaying of multiple rows when antialiasing is enabled by  aquiring a
  single OSD area for all rows - Thx to Rolf Ahrenberg (Closes #24)

2008-12-18: Version 0.0.7
- Try to set OSDArea to 8 bpp when AntiAliasing is enabled (Closes #17)

2008-12-14: Version 0.0.6
- Project moved to http://projects.vdr-developer.org/projects/show/plg-ttxtsubs
- Applied patch from Rolf Ahrenberg (vdr-ttxtsubs-0.0.5-raastinrauta-edition.diff.gz)
  which introduces the following changes:
  - Rolf Ahrenberg
    - Updated the core patch and Makefile against VDR's current API